tests/ascribe-15/out.txt
error: mismatched types: expected t, found t
   ┌─ err.sml:24:9
   │
24 │ val _ = A.doSomething (B.make ())
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^

typechecking failed
